--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -19,8 +19,7 @@ model:
 
 # Where should the resolver implementations go?
 resolver:
-  layout: follow-schema
-  dir: graph
+  filename: graph/schema.resolvers.go
   package: graph
 
 # Optional: turn on use `gqlgen:"fieldName"` tags in your models
